--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.4",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.12.0",
+    "@material-ui/icons": "^4.9.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-modal": "^3.12.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.0.1",
     "react-youtube": "^7.13.1",
     "typeface-roboto": "0.0.54"
   },
@@ -19,5 +19,14 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8085"
+  "proxy": "http://localhost:8085",
+  "devDependencies": {
+    "react-material-ui-form-validator": "^2.1.4"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
